feat: add Quarkus validations